--- a/src/components/Navbar/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar/Navbar.scss
@@ -4,6 +4,7 @@
   background: $navbar-default-bg;
   height: 100vh;
   left: 0;
+  min-width: 100px;
   overflow: hidden;
   position: fixed;
   top: 0;
